Implement main source build features